@@ -327,6 +327,10 @@ span.pos {
 #ps-container .ps-table tr.even .primary { background-color: #c6c6c6; }
 #ps-container .ps-table tr.even .secondary { background-color: #d3d3d3; }
 
+#ps-container .ps-table tr.half {
+	border-bottom: 2px solid gray;
+}
+
 /* --- Style for flag and icon images in the team list */
 #ps-container .ps-table .left img  {
 	padding-top: 2px;
